@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -144,7 +144,9 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
     else {
       var = new Var(value);
       var.setName(name);
-      exec.currentScope.addVariable(var);
+      if(exec.currentScope != null) {
+        exec.currentScope.addVariable(var);
+      }
     }    
     return var;
   }
@@ -158,7 +160,7 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
   }
 
   public Var setVariable(String name, int value) {
-    return setVariable(name, new Var(new Long(value)));
+    return setVariable(name, new Var(Long.valueOf(value)));
   }
 
   /** 
@@ -172,7 +174,9 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
     else {
       var = new Var();
       var.setName(name);
-      exec.currentScope.addVariable(var);
+      if(exec.currentScope != null) {
+        exec.currentScope.addVariable(var);
+      }
     }    
     return var;
   }
@@ -650,9 +654,9 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
   void initOptions() {
     Iterator<Map.Entry<String,String>> i = exec.conf.iterator();
     while (i.hasNext()) {
-      Entry<String,String> item = (Entry<String,String>)i.next();
-      String key = (String)item.getKey();
-      String value = (String)item.getValue();
+      Entry<String, String> item = i.next();
+      String key = item.getKey();
+      String value = item.getValue();
       if (key == null || value == null || !key.startsWith("hplsql.")) {
         continue;
       }
@@ -678,7 +682,7 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
    * Set SQLCODE
    */
   public void setSqlCode(int sqlcode) {
-    Long code = new Long(sqlcode);
+    Long code = Long.valueOf(sqlcode);
     Var var = findVariable(SQLCODE);
     if (var != null) {
       var.setValue(code);
@@ -716,7 +720,7 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
   public void setHostCode(int code) {
     Var var = findVariable(HOSTCODE);
     if (var != null) {
-      var.setValue(new Long(code));
+      var.setValue(Long.valueOf(code));
     }
   }
   
@@ -1298,15 +1302,7 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
   public Integer visitCopy_stmt(HplsqlParser.Copy_stmtContext ctx) { 
     return new Copy(exec).run(ctx); 
   }
-  
-  /**
-   * COPY FROM FTP statement
-   */
-  @Override 
-  public Integer visitCopy_from_ftp_stmt(HplsqlParser.Copy_from_ftp_stmtContext ctx) { 
-    return new Ftp(exec).run(ctx); 
-  }
-  
+
   /**
    * COPY FROM LOCAL statement
    */
@@ -1842,6 +1838,14 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
   @Override 
   public Integer visitSignal_stmt(HplsqlParser.Signal_stmtContext ctx) { 
     return exec.stmt.signal(ctx); 
+  }
+  
+  /**
+   * SUMMARY statement
+   */
+  @Override 
+  public Integer visitSummary_stmt(HplsqlParser.Summary_stmtContext ctx) { 
+    return exec.stmt.summary(ctx); 
   }  
   
   /**
@@ -2125,12 +2129,26 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
    * Identifier
    */
   @Override 
-  public Integer visitIdent(HplsqlParser.IdentContext ctx) { 
+  public Integer visitIdent(HplsqlParser.IdentContext ctx) {
+    boolean hasSub = false;
     String ident = ctx.getText();
-    Var var = findVariable(ident);
+    String actualIdent = ident;
+    if (ident.startsWith("-")) {
+      hasSub = true;
+      actualIdent = ident.substring(1, ident.length());
+    }
+
+    Var var = findVariable(actualIdent);
     if (var != null) {
       if (!exec.buildSql) {
-        exec.stackPush(var);
+        if (hasSub) {
+          Var var1 = new Var(var);
+          var1.negate();
+          exec.stackPush(var1);
+        }
+        else {
+          exec.stackPush(var);
+        }
       }
       else {
         exec.stackPush(new Var(ident, Var.Type.STRING, var.toSqlString()));
@@ -2166,7 +2184,7 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
    */
   @Override 
   public Integer visitInt_number(HplsqlParser.Int_numberContext ctx) {
-    exec.stack.push(new Var(new Long(ctx.getText())));  	  
+    exec.stack.push(new Var(Long.valueOf(ctx.getText())));
 	  return 0; 
   }
  
@@ -2199,7 +2217,7 @@ public class Exec extends HplsqlBaseVisitor<Integer> {
     if (ctx.T_FALSE() != null) {
       val = false;
     }
-    stackPush(new Var(new Boolean(val)));     
+    stackPush(new Var(Boolean.valueOf(val)));
     return 0; 
   }
 
