@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -19,23 +19,30 @@
 package org.apache.hadoop.hive.ql.optimizer.physical;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import junit.framework.Assert;
+import org.junit.Assert;
 
 import org.apache.hadoop.hive.ql.CompilationOpContext;
 import org.apache.hadoop.hive.ql.exec.*;
 import org.apache.hadoop.hive.ql.exec.vector.VectorExpressionDescriptor;
+import org.apache.hadoop.hive.ql.exec.vector.VectorExpressionDescriptor.Mode;
+import org.apache.hadoop.hive.ql.exec.vector.ColumnVector;
+import org.apache.hadoop.hive.ql.exec.vector.VectorAggregationDesc;
 import org.apache.hadoop.hive.ql.exec.vector.VectorGroupByOperator;
 import org.apache.hadoop.hive.ql.exec.vector.VectorizationContext;
+import org.apache.hadoop.hive.ql.exec.vector.expressions.aggregates.VectorUDAFCountStar;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.aggregates.gen.VectorUDAFSumLong;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.FuncAbsLongToLong;
 import org.apache.hadoop.hive.ql.metadata.HiveException;
+import org.apache.hadoop.hive.ql.optimizer.physical.Vectorizer.VectorizerCannotVectorizeException;
 import org.apache.hadoop.hive.ql.plan.*;
 import org.apache.hadoop.hive.ql.plan.VectorGroupByDesc.ProcessingMode;
 import org.apache.hadoop.hive.ql.udf.generic.*;
+import org.apache.hadoop.hive.ql.udf.generic.GenericUDAFSum.GenericUDAFSumLong;
 import org.apache.hadoop.hive.serde2.objectinspector.ObjectInspector;
 import org.apache.hadoop.hive.serde2.typeinfo.TypeInfoFactory;
 import org.junit.Before;
@@ -76,26 +83,41 @@ public class TestVectorizer {
   }
 
   @Test
-  public void testAggregateOnUDF() throws HiveException {
-    AggregationDesc aggDesc = new AggregationDesc();
-    aggDesc.setGenericUDAFName("sum");
-    ExprNodeGenericFuncDesc exprNodeDesc = new ExprNodeGenericFuncDesc();
-    exprNodeDesc.setTypeInfo(TypeInfoFactory.intTypeInfo);
-    ArrayList<ExprNodeDesc> params = new ArrayList<ExprNodeDesc>();
-    params.add(exprNodeDesc);
-    aggDesc.setParameters(params);
-    GenericUDFAbs absUdf = new GenericUDFAbs();
-    exprNodeDesc.setGenericUDF(absUdf);
-    List<ExprNodeDesc> children = new ArrayList<ExprNodeDesc>();
+  public void testAggregateOnUDF() throws HiveException, VectorizerCannotVectorizeException {
     ExprNodeColumnDesc colExprA = new ExprNodeColumnDesc(Integer.class, "col1", "T", false);
     ExprNodeColumnDesc colExprB = new ExprNodeColumnDesc(Integer.class, "col2", "T", false);
+
+    List<ExprNodeDesc> children = new ArrayList<ExprNodeDesc>();
     children.add(colExprA);
-    exprNodeDesc.setChildren(children);
+    ExprNodeGenericFuncDesc exprNodeDesc = new ExprNodeGenericFuncDesc(TypeInfoFactory.intTypeInfo, new GenericUDFAbs(), children);
+
+    ArrayList<ExprNodeDesc> params = new ArrayList<ExprNodeDesc>();
+    params.add(exprNodeDesc);
+
+    List<ObjectInspector> paramOIs = new ArrayList<ObjectInspector>();
+    paramOIs.add(exprNodeDesc.getWritableObjectInspector());
+
+    AggregationDesc aggDesc = new AggregationDesc("sum",
+        FunctionRegistry.getGenericUDAFEvaluator("sum", paramOIs, false, false),
+        params,
+        false,
+        GenericUDAFEvaluator.Mode.PARTIAL1);
 
     ArrayList<String> outputColumnNames = new ArrayList<String>();
     outputColumnNames.add("_col0");
 
     GroupByDesc desc = new GroupByDesc();
+    VectorGroupByDesc vectorDesc = new VectorGroupByDesc();
+    vectorDesc.setProcessingMode(ProcessingMode.HASH);
+    vectorDesc.setVecAggrDescs(
+        new VectorAggregationDesc[] {
+          new VectorAggregationDesc(
+              aggDesc.getGenericUDAFName(),
+              new GenericUDAFSum.GenericUDAFSumLong(),
+              aggDesc.getMode(),
+              TypeInfoFactory.longTypeInfo, ColumnVector.Type.LONG, null,
+              TypeInfoFactory.longTypeInfo, ColumnVector.Type.LONG, VectorUDAFCountStar.class)});
+
     desc.setOutputColumnNames(outputColumnNames);
     ArrayList<AggregationDesc> aggDescList = new ArrayList<AggregationDesc>();
     aggDescList.add(aggDesc);
@@ -106,22 +128,24 @@ public class TestVectorizer {
     grpByKeys.add(colExprB);
     desc.setKeys(grpByKeys);
 
-    GroupByOperator gbyOp = new GroupByOperator(new CompilationOpContext());
-    gbyOp.setConf(desc);
+    Operator<? extends OperatorDesc> gbyOp = OperatorFactory.get(new CompilationOpContext(), desc);
+
     desc.setMode(GroupByDesc.Mode.HASH);
 
+    VectorizationContext ctx = new VectorizationContext("name", Arrays.asList(new String[] {"col1", "col2"}));
+
     Vectorizer v = new Vectorizer();
-    Assert.assertTrue(v.validateMapWorkOperator(gbyOp, null, false));
-    VectorGroupByOperator vectorOp = (VectorGroupByOperator) v.vectorizeOperator(gbyOp, vContext, false);
-    Assert.assertEquals(VectorUDAFSumLong.class, vectorOp.getAggregators()[0].getClass());
-    VectorUDAFSumLong udaf = (VectorUDAFSumLong) vectorOp.getAggregators()[0];
-    Assert.assertEquals(FuncAbsLongToLong.class, udaf.getInputExpression().getClass());
+    v.testSetCurrentBaseWork(new MapWork());
+    VectorGroupByOperator vectorOp =
+        (VectorGroupByOperator) Vectorizer.vectorizeGroupByOperator(gbyOp, ctx, vectorDesc);
+
+    Assert.assertEquals(VectorUDAFSumLong.class, vectorDesc.getVecAggrDescs()[0].getVecAggrClass());
   }
 
   @Test
   public void testValidateNestedExpressions() {
     ExprNodeColumnDesc col1Expr = new ExprNodeColumnDesc(Integer.class, "col1", "table", false);
-    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(new Integer(10));
+    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(Integer.valueOf(10));
 
     GenericUDFOPGreaterThan udf = new GenericUDFOPGreaterThan();
     ExprNodeGenericFuncDesc greaterExprDesc = new ExprNodeGenericFuncDesc();
@@ -147,8 +171,8 @@ public class TestVectorizer {
     andExprDesc.setChildren(children3);
 
     Vectorizer v = new Vectorizer();
-    Assert.assertFalse(v.validateExprNodeDesc(andExprDesc, VectorExpressionDescriptor.Mode.FILTER));
-    Assert.assertFalse(v.validateExprNodeDesc(andExprDesc, VectorExpressionDescriptor.Mode.PROJECTION));
+    v.testSetCurrentBaseWork(new MapWork());
+    Assert.assertTrue(v.validateExprNodeDesc(andExprDesc, "test", VectorExpressionDescriptor.Mode.FILTER, false));
   }
 
   /**
@@ -196,7 +220,9 @@ public class TestVectorizer {
     map.setConf(mjdesc);
 
     Vectorizer vectorizer = new Vectorizer();
-    Assert.assertTrue(vectorizer.validateMapWorkOperator(map, null, false));
+    vectorizer.testSetCurrentBaseWork(new MapWork());
+    // UNDONE
+    // Assert.assertTrue(vectorizer.validateMapWorkOperator(map, null, false));
   }
 
 
@@ -212,6 +238,40 @@ public class TestVectorizer {
       map.setConf(mjdesc);
 
       Vectorizer vectorizer = new Vectorizer();
-      Assert.assertTrue(vectorizer.validateMapWorkOperator(map, null, false));
+      vectorizer.testSetCurrentBaseWork(new MapWork());
+      // UNDONE
+      // Assert.assertTrue(vectorizer.validateMapWorkOperator(map, null, false));
+  }
+
+  @Test
+  public void testExprNodeDynamicValue() {
+    ExprNodeDesc exprNode = new ExprNodeDynamicValueDesc(new DynamicValue("id1", TypeInfoFactory.stringTypeInfo));
+    Vectorizer v = new Vectorizer();
+    Assert.assertTrue(v.validateExprNodeDesc(exprNode, "Test", Mode.FILTER, false));
+    Assert.assertTrue(v.validateExprNodeDesc(exprNode, "Test", Mode.PROJECTION, false));
+  }
+
+  @Test
+  public void testExprNodeBetweenWithDynamicValue() {
+    ExprNodeDesc notBetween = new ExprNodeConstantDesc(TypeInfoFactory.booleanTypeInfo, Boolean.FALSE);
+    ExprNodeColumnDesc colExpr = new ExprNodeColumnDesc(String.class, "col1", "table", false);
+    ExprNodeDesc minExpr = new ExprNodeDynamicValueDesc(new DynamicValue("id1", TypeInfoFactory.stringTypeInfo));
+    ExprNodeDesc maxExpr = new ExprNodeDynamicValueDesc(new DynamicValue("id2", TypeInfoFactory.stringTypeInfo));
+
+    ExprNodeGenericFuncDesc betweenExpr = new ExprNodeGenericFuncDesc();
+    GenericUDF betweenUdf = new GenericUDFBetween();
+    betweenExpr.setTypeInfo(TypeInfoFactory.booleanTypeInfo);
+    betweenExpr.setGenericUDF(betweenUdf);
+    List<ExprNodeDesc> children1 = new ArrayList<ExprNodeDesc>(2);
+    children1.add(notBetween);
+    children1.add(colExpr);
+    children1.add(minExpr);
+    children1.add(maxExpr);
+    betweenExpr.setChildren(children1);
+
+    Vectorizer v = new Vectorizer();
+    v.testSetCurrentBaseWork(new MapWork());
+    boolean valid = v.validateExprNodeDesc(betweenExpr, "Test", Mode.FILTER, false);
+    Assert.assertTrue(valid);
   }
 }
